Fixed: web project description now aligns to flex-start

--- a/_sass/_web-project.scss
+++ b/_sass/_web-project.scss
@@ -328,7 +328,8 @@
 					@include align-items(center);
 					padding-right: 15px;
 					overflow: hidden;
-
+					@include align-self-start();
+					
 					.intro-text {
 						opacity: 0;
 						@include body-font();
